# vmx-serial-observer

./: CMakeLists.txt  LICENSE  README.md
include/serial_interface/: vmx_serial_if.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/client/include/stm32_hal_conf/: stm32f4xx_hal_conf.h
src/server/: CMakeLists.txt  main.cpp
